Minor Changes / Content Updates

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>HackRCDU</title>
     <meta
       name="keywords"
       content="Hackathon, HackRCDU, Hacakthon Delhi, Turington, Ramanujan College, Delhi University, Coding, Ramanujan, DU, Antha Prerna Cell, DU_CS, University of Delhi"
@@ -80,19 +80,19 @@
                     <a href="#" class="nav-links">Home</a>
                 </li> -->
                 <li>
-                    <a href="#" class="nav-links">About</a>
+                    <a href="#about-section" class="nav-links">About</a>
                 </li>
                 <li>
-                    <a href="#" class="nav-links">Schedule</a>
+                    <a href="#schedule-section" class="nav-links">Schedule</a>
                 </li>
                 <li>
-                    <a href="#" class="nav-links">Events</a>
+                    <a href="#event-section" class="nav-links">Events</a>
                 </li>
                 <li>
-                    <a href="#" class="nav-links">Sponsors</a>
+                    <a href="#sponsors-section" class="nav-links">Sponsors</a>
                 </li>
                 <li>
-                    <a href="#" class="nav-links">FAQs</a>
+                    <a href="#faq-section" class="nav-links">FAQs</a>
                 </li>
             </ul>
         </nav>
@@ -157,19 +157,19 @@
         </div>
       </div>
       <div class="cards">
-        <div class="card">
+        <div class="card card-clock">
           <i class="far fa-clock animated bounceIn delay-2s"></i>
           <h3>12hrs</h3>
         </div>
-        <div class="card">
+        <div class="card card-themes">
           <i class="fas fa-laptop-code animated bounceIn delay-2s"></i>
           <h3>6 Themes</h3>
         </div>
-        <div class="card">
+        <div class="card card-teams">
           <i class="fas fa-users animated bounceIn delay-2s"></i>
           <h3>15 Teams</h3>
         </div>
-        <div class="card">
+        <div class="card card-food">
           <i class="fas fa-hotdog animated bounceIn delay-2s"></i>
           <h3>Food & Swags</h3>
         </div>
@@ -183,46 +183,57 @@
       </div>
       <div class="schedule-section-section">
         <div class="section-1">
-          <h2>Day 1</h2>
-          <h5>Beginning</h5>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Perspiciatis, eius!
-          </p>
-          <br />
-          <h5>Beginning</h5>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Perspiciatis, eius!
-          </p>
-          <br />
-          <h5>Beginning</h5>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Perspiciatis, eius!
-          </p>
+          <h2 style="text-align: center;">DAY 1</h2>
+          <table class="table-fill">
+            <tbody>
+              <tr>
+                <td>10AM</td>
+                <td>Inauguration Ceremony
+                  Opening speech, Mentor and Judges introduction, general instructions.
+                </td>
+              </tr>
+              <tr>
+                <td>11AM</td>
+                <td>Hack Begins
+                  First solve the problem. Then, write the code.
+                </td>
+              </tr>
+              <tr>
+                <td>2PM</td>
+                <td>Lunch
+                  Eat. Code. Repeat 😋
+                </td>
+              </tr>
+              <tr>
+                <td>5PM</td>
+                <td>Mentor Session - Idea Validation</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
         <div class="partition"></div>
         <div class="section-2">
-          <h2>Day 2</h2>
-          <h5>Beginning</h5>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Perspiciatis, eius!
-          </p>
-          <br />
-          <h5>Beginning</h5>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Perspiciatis, eius!
-          </p>
-          <br />
-          <h5>Beginning</h5>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Perspiciatis, eius!
-          </p>
-
+          <h2 style="text-align: center;">DAY 2</h2>
+          <table class="table-fill">
+            <tbody>
+              <tr>
+                <td>10AM</td>
+                <td>Hack continues.</td>
+              </tr>
+              <tr>
+                <td>12 Noon</td>
+                <td>Here we eat again 🍔</td>
+              </tr>
+              <tr>
+                <td>1PM</td>
+                <td>Final Round (Presentation)</td>
+              </tr>
+              <tr>
+                <td>2PM</td>
+                <td>Result and Prize Distribution.</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </div>
     </section>
@@ -279,7 +290,7 @@
       </div>
     </section>
     <footer id="footer" class="footer">
-      <h4>Made with <i class="fas fa-heart"></i> by <a href="https://www.linkedin.com/in/pavan-gandhi/">Pavan Gandhi</a></h4>
+      
     </footer>
 
     <!-- Particles.js -->
