--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
       crossorigin="anonymous"
     />
-
+    
     <!-- animate.css -->
     <link
       rel="stylesheet"
@@ -285,7 +285,63 @@
           <h1 class="animated flip delay-2s">FAQs_</h1>
         </div>
         <div class="faqs-list">
-          <h4>Announced Soon...</h4>
+          <div class="accordion">
+            <div class="accordion-item">
+              <a>How big can my team be?</a>
+              <div class="content">
+                <p>The maximum team size allowed is 4.</p>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <a>Can I come individually?</a>
+              <div class="content">
+                <p>Yes, but you are advised to make a team for the event.</p>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <a>When?</a>
+              <div class="content">
+                <p>HackRcdu 2020 will be a 24 hours hackathon which will stretch from 27th January to 28th January 2020 (without the overnight stay)</p>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <a>Where?</a>
+              <div class="content">
+                <p>HackRcdu will be conducted on the college campus of Ramanujan College, Delhi University - Kalkaji.
+                </p>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <a>Will there be food arrangement?</a>
+              <div class="content">
+                <p>Oh-Yeah-Absolutely. You will be provided with proper meals on both days. Thanks to our sponsors.</p>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <a>How much does it cost?</a>
+              <div class="content">
+                <p>Everything at Hackrcdu is free of cost.</p>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <a>What are the criteria of shortlisting the teams?</a>
+              <div class="content">
+                <p>The registered participants will be shortlisted based on their GitHub and LinkedIn profiles.</p>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <a>What do I bring with me to the event?</a>
+              <div class="content">
+                <p>You are required to bring your school/college ID, laptops, phone, chargers, extensions.</p>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <a>What is the eligibility criteria?</a>
+              <div class="content">
+                <p>You must be a student from any University/College or Higher Secondary School in India.</p>
+              </div>
+            </div>
+          </div> 
         </div>
       </div>
     </section>
