Social Links/ Minor Adjustments

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     />
     <meta
       name="author"
-      href="https://github.com/iampavangandhi/"
-      content="Pavan Gandhi"
+      href=""
+      content=""
     />
 
     <meta property="og:type" content="website" />
@@ -46,7 +46,7 @@
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
       crossorigin="anonymous"
     />
-    
+
     <!-- animate.css -->
     <link
       rel="stylesheet"
@@ -111,23 +111,17 @@
             <a class="turington" href="#">Turington'20</a>
           </div>
           <div class="icons">
-            <a href="https://www.linkedin.com/in/pavan-gandhi/"
+            <a href="https://www.linkedin.com/company/turington-rcdu"
               ><i class="fab fa-linkedin"></i
             ></a>
-            <a href="https://www.github.com/iampavangandhi"
+            <a href="https://github.com/turington"
               ><i class="fab fa-github"></i
             ></a>
-            <a href="https://www.facebook.com/iampavangandhi"
+            <a href="https://www.facebook.com/turington/"
               ><i class="fab fa-facebook"></i
             ></a>
-            <a href="https://www.instagram.com/official_pavang/"
+            <a href="https://www.instagram.com/turington.rcdu/"
               ><i class="fab fa-instagram"></i
-            ></a>
-            <a href="https://www.twitter.com/PavanGandhi7"
-              ><i class="fab fa-twitter"></i
-            ></a>
-            <a href="https://www.twitter.com/PavanGandhi7"
-              ><i class="fab fa-youtube"></i
             ></a>
           </div>
         </div>
@@ -253,10 +247,12 @@
             <div class="div6 event-card"><h2>GENTECH QUIZ</h2></div>
             <div class="div7 event-card"><h2>UI/UX</h2></div>
             <div class="div8 event-card"><h2>T-SHIRT PAINTING</h2></div>
+            <!--
             <div class="div9 event-card">event 9</div>
             <div class="div10 event-card">event 10</div>
             <div class="div11 event-card">event 11</div>
             <div class="div12 event-card">event 12</div>
+          -->
           </div>
         </div>
       </div>
