--- a/index.html
+++ b/index.html
@@ -170,6 +170,38 @@
       </div>
     </section>
 
+    <section id="themes-section" class="section themes-section">
+      <h1 class="animated flip delay-2s">Themes</h1>
+      <div class="cards">
+        <div class="card card-clock">
+          <i class="far fa-clock animated bounceIn delay-2s"></i>
+          <h3>Machine Learning</h3>
+        </div>
+        <div class="card card-teams">
+          <i class="fas fa-users animated bounceIn delay-2s"></i>
+          <h3>AR / VR</h3>
+        </div>
+        <div class="card card-clock">
+          <i class="far fa-clock animated bounceIn delay-2s"></i>
+          <h3>Block Chain</h3>
+        </div>
+        </div>
+        <div class="cards">
+        <div class="card card-teams">
+          <i class="fas fa-users animated bounceIn delay-2s"></i>
+          <h3>Socio Economic Challenges</h3>
+        </div>
+        <div class="card card-clock">
+          <i class="far fa-clock animated bounceIn delay-2s"></i>
+          <h3>Fintech</h3>
+        </div>
+        <div class="card card-teams">
+          <i class="fas fa-users animated bounceIn delay-2s"></i>
+          <h3>Health</h3>
+        </div>
+      </div>
+    </section>
+
     <!-- Schedule Section -->
     <section id="schedule-section" class="section schedule-section">
       <div class="event-schedule">
@@ -291,7 +323,7 @@
             <div class="accordion-item">
               <a>Can I come individually?</a>
               <div class="content">
-                <p>Yes, but you are advised to make a team for the event.</p>
+                <p>No. A team of minimum 2 members is allowed.</p>
               </div>
             </div>
             <div class="accordion-item">
