--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             Ramanujan College, University of Delhi.
           </h5>
           <div class="apply-here">
-            <a class="apply" href="#">Apply here</a>
+            <a class="apply" href="#"><img src="./assets/dev.png" width="150px" class="" alt=""></a>
             <a class="turington" href="#">Turington'20</a>
           </div>
           <div class="icons">
@@ -274,9 +274,9 @@
             <div class="div1 event-card"><h2>CODING MARATHON</h2></div>
             <div class="div2 event-card"><h2>DEBUG THE CODE</h2></div>
             <div class="div3 event-card"><h2>CHITTI 3.0</h2></div>
-            <div class="div4 event-card"><h2>PUBG</h2></div>
-            <div class="div5 event-card"><h2>IPL AUCTION</h2></div>
-            <div class="div6 event-card"><h2>GENTECH QUIZ</h2></div>
+            <div class="div4 event-card"><h2>QR HUNT 3.0</h2></div>
+            <div class="div5 event-card"><h2>TAMBOLA</h2></div>
+            <div class="div6 event-card"><h2>FACE PAINTING</h2></div>
             <div class="div7 event-card"><h2>UI/UX</h2></div>
             <div class="div8 event-card"><h2>T-SHIRT PAINTING</h2></div>
             <!--
@@ -296,7 +296,23 @@
           <h1 class="animated flip delay-2s">Our Sponsors_</h1>
         </div>
         <div class="sponsors-list">
-          <h4>Announced Soon...</h4>
+          <div class="sponsors-list-list">
+          <h5>Alpha Sponsor</h5>
+          <img src="./assets/dev.png" width="200px" class="" alt="">
+          </div>
+          <div class="sponsors-list-list">
+          <h5>Beta Sponsor</h5>
+          <img src="./assets/matic.png" width="200px" class="" alt="">
+          <img src="./assets/fold.svg" width="120px" class="" alt="">
+          </div>
+          <div class="sponsors-list-list">
+            <h5>Coding Partner</h5>
+            <div class="sponsors-list-img">
+            <img src="./assets/CNLOGO.svg" width="180px" class="" alt="">
+            <img src="./assets/index.png" width="320px" class="" alt="">
+            <img src="./assets/0ba295b66f676a965ba15303344f9e553b9e5f54381820d3752eee997e0c5d97cec5dbd68de0edd07b62c69b5d6b11ed15dd4655fef05607afd6a9deab3e1cc1.png" width="200px" class="" alt="">
+            </div>
+          </div>
         </div>
         <div class="mentors">
           <h1 class="animated flip delay-2s">Our Mentors_</h1>
