added lot of things

--- a/index.html
+++ b/index.html
@@ -107,8 +107,14 @@
             Ramanujan College, University of Delhi.
           </h5>
           <div class="apply-here">
-            <a class="apply" href="#"><img src="./assets/dev.png" width="150px" class="" alt=""></a>
-            <a class="turington" href="#">Turington'20</a>
+            <button id="devfolio-apply-now"><svg class="logo" xmlns="http://www.w3.org/2000/svg" fill="#fff"
+                viewBox="0 0 115.46 123.46" style="height:24px;width:24px;margin-right:8px">
+                <path
+                  d="M115.46 68a55.43 55.43 0 0 1-50.85 55.11S28.12 124 16 123a12.6 12.6 0 0 1-10.09-7.5 15.85 15.85 0 0 0 5.36 1.5c4 .34 10.72.51 20.13.51 13.82 0 28.84-.38 29-.38h.26a60.14 60.14 0 0 0 54.72-52.47c.05 1.05.08 2.18.08 3.34z" />
+                <path
+                  d="M110.93 55.87A55.43 55.43 0 0 1 60.08 111s-36.48.92-48.58-.12C5 110.29.15 104.22 0 97.52l.2-83.84C.38 7 5.26.94 11.76.41c12.11-1 48.59.12 48.59.12a55.41 55.41 0 0 1 50.58 55.34z" />
+                </svg>Apply with Devfolio</button>
+            <!-- <a class="turington" href="https://turington.in">Turington'20</a> -->
           </div>
           <div class="icons">
             <a href="https://www.linkedin.com/company/turington-rcdu"
@@ -123,6 +129,8 @@
             <a href="https://www.instagram.com/turington.rcdu/"
               ><i class="fab fa-instagram"></i
             ></a>
+            <a href="https://www.twitter.com/PavanGandhi7"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.twitter.com/PavanGandhi7"><i class="fab fa-youtube"></i></a>
           </div>
         </div>
         <div class="illustration animated slideInRight">
@@ -153,7 +161,7 @@
       <div class="cards">
         <div class="card card-clock">
           <i class="far fa-clock animated bounceIn delay-2s"></i>
-          <h3>12hrs</h3>
+          <h3>18hrs</h3>
         </div>
         <div class="card card-themes">
           <i class="fas fa-laptop-code animated bounceIn delay-2s"></i>
@@ -171,33 +179,31 @@
     </section>
 
     <section id="themes-section" class="section themes-section">
-      <h1 class="animated flip delay-2s">Themes</h1>
-      <div class="cards">
-        <div class="card card-clock">
-          <i class="far fa-clock animated bounceIn delay-2s"></i>
+      <h1 class="animated flip delay-2s">Themes_</h1>
+      <div class="theme-cards">
+        <div class="theme-card card-clock">
+          <i class="fas fa-cubes animated bounceIn delay-2s"></i>
           <h3>Machine Learning</h3>
         </div>
-        <div class="card card-teams">
-          <i class="fas fa-users animated bounceIn delay-2s"></i>
-          <h3>AR / VR</h3>
+        <div class="theme-card card-clock">
+        <i class="fas fa-vr-cardboard animated bounceIn delay-2s"></i>
+        <h3>AR/VR</h3>
         </div>
-        <div class="card card-clock">
-          <i class="far fa-clock animated bounceIn delay-2s"></i>
-          <h3>Block Chain</h3>
+        <div class="theme-card card-clock">
+        <i class="fas fa-network-wired animated bounceIn delay-2s"></i>
+        <h3>BlockChain</h3>
         </div>
+        <div class="theme-card card-clock">
+        <i class="fas fa-users animated bounceIn delay-2s"></i>
+        <h3>Social Economic</h3>
         </div>
-        <div class="cards">
-        <div class="card card-teams">
-          <i class="fas fa-users animated bounceIn delay-2s"></i>
-          <h3>Socio Economic Challenges</h3>
+        <div class="theme-card card-clock">
+        <i class="fas fa-money-check-alt animated bounceIn delay-2s"></i>
+        <h3>FinTech</h3>
         </div>
-        <div class="card card-clock">
-          <i class="far fa-clock animated bounceIn delay-2s"></i>
-          <h3>Fintech</h3>
-        </div>
-        <div class="card card-teams">
-          <i class="fas fa-users animated bounceIn delay-2s"></i>
-          <h3>Health</h3>
+        <div class="theme-card card-clock">
+        <i class="fas fa-microchip animated bounceIn delay-2s"></i>
+        <h3>Open Innovation</h3>
         </div>
       </div>
     </section>
@@ -271,14 +277,28 @@
         </div>
         <div class="events-section-section">
           <div class="parent event-cards">
-            <div class="div1 event-card"><h2>CODING MARATHON</h2></div>
-            <div class="div2 event-card"><h2>DEBUG THE CODE</h2></div>
-            <div class="div3 event-card"><h2>CHITTI 3.0</h2></div>
-            <div class="div4 event-card"><h2>QR HUNT 3.0</h2></div>
-            <div class="div5 event-card"><h2>TAMBOLA</h2></div>
-            <div class="div6 event-card"><h2>FACE PAINTING</h2></div>
-            <div class="div7 event-card"><h2>UI/UX</h2></div>
-            <div class="div8 event-card"><h2>T-SHIRT PAINTING</h2></div>
+            <div class="div1 event-card"><a href="https://turington.in"><h2>CODING MARATHON</h2></a></div>
+            <div class="div2 event-card"><h2><a href="https://turington.in">
+              <h2>DEBUG THE CODE</h2>
+            </a></h2></div>
+            <div class="div3 event-card"><a href="https://turington.in">
+              <h2>CHITTI 3.0</h2>
+            </a></div>
+            <div class="div4 event-card"><a href="https://turington.in">
+              <h2>QR HUNT 2.0</h2>
+            </a></div>
+            <div class="div5 event-card"><a href="https://turington.in">
+              <h2>TAMBOLA</h2>
+            </a></div>
+            <div class="div6 event-card"><a href="https://turington.in">
+              <h2>FACE PAINTING</h2>
+            </a></div>
+            <div class="div7 event-card"><a href="https://turington.in">
+              <h2>UI/UX</h2>
+            </a></div>
+            <div class="div8 event-card"><a href="https://turington.in">
+              <h2>T-Shirt Painting</h2>
+            </a></div>
             <!--
             <div class="div9 event-card">event 9</div>
             <div class="div10 event-card">event 10</div>
@@ -302,14 +322,15 @@
           </div>
           <div class="sponsors-list-list">
           <h5>Beta Sponsor</h5>
-          <img src="./assets/matic.png" width="200px" class="" alt="">
+          <img src="./assets/matic2.png" width="220px" class="" alt="">
+          <div class="padd"></div>
           <img src="./assets/fold.svg" width="120px" class="" alt="">
           </div>
           <div class="sponsors-list-list">
             <h5>Coding Partner</h5>
             <div class="sponsors-list-img">
             <img src="./assets/CNLOGO.svg" width="180px" class="" alt="">
-            <img src="./assets/index.png" width="320px" class="" alt="">
+            <img src="./assets/index.png" width="300px" class="" alt="">
             <img src="./assets/0ba295b66f676a965ba15303344f9e553b9e5f54381820d3752eee997e0c5d97cec5dbd68de0edd07b62c69b5d6b11ed15dd4655fef05607afd6a9deab3e1cc1.png" width="200px" class="" alt="">
             </div>
           </div>
@@ -390,7 +411,13 @@
       </div>
     </section>
     <footer id="footer" class="footer">
-      
+      <div class="footer-contact">
+      <h4>Contact Us: <br>
+        Pavan Gandhi - 91749 20199 <br>
+        Toseef Ali Khan - 72918 48772 <br>
+        Mail: pavan.gandhi@ramanujan.du.ac.in</h4>
+        </div>
+      <h4>Made with <i class="fas fa-heart"></i> by <a href="https://www.linkedin.com/in/pavan-gandhi/"><span>Pavan Gandhi</span></a> & <a href="https://github.com/PawanVerma1337"><span>Pawan Verma</span></a></h4>
     </footer>
 
     <!-- Particles.js -->
