--- a/index.html
+++ b/index.html
@@ -318,13 +318,17 @@
         <div class="sponsors-list">
           <div class="sponsors-list-list">
           <h5>Alpha Sponsor</h5>
+            <a href="https://devfolio.co">
           <img src="./assets/dev.png" width="200px" class="" alt="">
+          <a/>
           </div>
           <div class="sponsors-list-list">
           <h5>Beta Sponsor</h5>
-          <img src="./assets/matic2.png" width="220px" class="" alt="">
+            <a href="https://www.matic.network">
+          <img src="./assets/matic2.png" width="220px" class="" alt=""> </a>
           <div class="padd"></div>
-          <img src="./assets/fold.svg" width="120px" class="" alt="">
+            <a href="https://fold.money">
+              <img src="./assets/fold.svg" width="120px" class="" alt=""> </a>
           </div>
           <div class="sponsors-list-list">
             <h5>Coding Partner</h5>
