Prize Section Updated

--- a/index.html
+++ b/index.html
@@ -148,6 +148,12 @@
           </ul>
         </div>
       </div>
+      <div class="prize">
+        <div class="prize-card">1st Prize <br/> Rs.15000</div>
+        <div class="prize-card">2nd Prize <br/> Rs.10000</div>
+        <div class="prize-card">3rd Prize <br/> Rs.5000</div>
+        <div class="prize-card">Matic Prize <br/> Rs.10000</div>
+      </div>
       <div class="cards">
         <div class="card card-clock">
           <i class="far fa-clock animated bounceIn delay-2s"></i>
@@ -175,11 +181,11 @@
           <i class="fas fa-cubes animated bounceIn delay-2s"></i>
           <h3>Machine Learning</h3>
         </div>
-        <div class="theme-card card-clock">
+        <div class="theme-card card-themes">
         <i class="fas fa-vr-cardboard animated bounceIn delay-2s"></i>
         <h3>AR/VR</h3>
         </div>
-        <div class="theme-card card-clock">
+        <div class="theme-card card-teams">
         <i class="fas fa-network-wired animated bounceIn delay-2s"></i>
         <h3>BlockChain</h3>
         </div>
@@ -187,11 +193,11 @@
         <i class="fas fa-users animated bounceIn delay-2s"></i>
         <h3>Social Economic</h3>
         </div>
-        <div class="theme-card card-clock">
+        <div class="theme-card card-themes">
         <i class="fas fa-money-check-alt animated bounceIn delay-2s"></i>
         <h3>FinTech</h3>
         </div>
-        <div class="theme-card card-clock">
+        <div class="theme-card card-teams">
         <i class="fas fa-microchip animated bounceIn delay-2s"></i>
         <h3>Open Innovation</h3>
         </div>
