Prize Section Updated

--- a/index.html
+++ b/index.html
@@ -149,9 +149,7 @@
         </div>
       </div>
       <div class="prize">
-        <div class="prize-card">1st Prize <br/> Rs.15000</div>
-        <div class="prize-card">2nd Prize <br/> Rs.10000</div>
-        <div class="prize-card">3rd Prize <br/> Rs.5000</div>
+        <div class="prize-card">Prizes Worth <br/> Rs.1Lac</div>
         <div class="prize-card">Matic Prize <br/> Rs.10000</div>
       </div>
       <div class="cards">
