--- a/index.html
+++ b/index.html
@@ -271,10 +271,12 @@
         </div>
         <div class="events-section-section">
           <div class="parent event-cards">
-            <div class="div1 event-card"><a href="https://turington.in"><h2>CODING MARATHON</h2></a></div>
-            <div class="div2 event-card"><h2><a href="https://turington.in">
+            <div class="div1 event-card"><a href="https://turington.in">
+              <h2>CODING MARATHON</h2>
+            </a></div>
+            <div class="div2 event-card"><a href="https://turington.in">
               <h2>DEBUG THE CODE</h2>
-            </a></h2></div>
+            </a></div>
             <div class="div3 event-card"><a href="https://turington.in">
               <h2>CHITTI 3.0</h2>
             </a></div>
